Mensaje error login y sign in

--- a/registro-usuarios/src/main/resources/static/assets/css/css/untitled.css
+++ b/registro-usuarios/src/main/resources/static/assets/css/css/untitled.css
@@ -1,3 +1,12 @@
 .o-hidden {
 }
+.error-message {
+    color: red;
+    background-color: #ffe6e6;
+    padding: 10px;
+    border-radius: 5px;
+    display: none;
+    font-size: small;
+
+}
 
